# lonely-world

./: .coverage 2  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: config.json
docs/: IMPLEMENTATION_SUMMARY.md  README.md  demo-session.txt
lonely_world/: cli.py  config.py  i18n.py  logging_config.py  models.py  storage.py
lonely_world/game/: engine.py  loop.py  memory.py  prompts.py  world.py
lonely_world/llm/: _utils.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  retry.py
lonely_world/locales/: zh.json
lonely_world/web/: __init__.py  api.py  events.py  main.py  session.py  storage.py
tests/: __init__.py  test_cli.py  test_config.py  test_engine.py  test_game_loop.py  test_i18n.py  test_llm.py  test_main.py  test_memory.py  test_models.py  test_openai_provider.py  test_retry.py  test_storage.py  test_web_api.py  test_web_storage.py  test_world.py
web_static/: app.js  index.html  style.css
