[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lonely-world"
version = "0.2.0"
description = "一款中文命令行文字探险游戏，没有既定故事线，所有故事由玩家输入与智能体互动推进"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "lonely-world contributors"}
]
keywords = ["game", "text-adventure", "cli", "ai", "openai", "interactive-fiction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.25.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
lonely-world = "lonely_world.cli:main"
lonely-world-web = "lonely_world.web.main:run"

[project.urls]
Homepage = "https://github.com/panna-arts/lonely-world"
Repository = "https://github.com/panna-arts/lonely-world"
Issues = "https://github.com/panna-arts/lonely-world/issues"

[tool.setuptools]
py-modules = ["main"]
packages = ["lonely_world", "lonely_world.llm", "lonely_world.game"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP045",  # keep Optional[X] for Python 3.9 compatibility
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=lonely_world --cov-report=term-missing"
